--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@
 
 # Backup entities generated with doctrine:generate:entities command
 */Entity/*~
+.buildpath
+.project
+.settings/
+composer.lock
